--- a/src/components/Pages/Home.scss
+++ b/src/components/Pages/Home.scss
@@ -6,6 +6,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+
+    cursor: pointer;
 
     .Home_ciderblocTextWrapper {
         width: 600px;
@@ -42,6 +45,55 @@
                 animation: lineAnim 3.5s ease-in-out;
             }
         }
+    }
+
+    .hide {
+        opacity: 0;
+        transition: all 1s ease-in-out;
+    }
+
+    .hidden {
+        opacity: 0 !important;
+    }
+
+    .Home_squares {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+        animation: squaresAnim 3s ease-in-out 4.5s;
+        opacity: var(--opacity);
+        z-index: 3;
+    }
+
+    .Home_image {
+        position: absolute;
+        translate: -50% -50%;
+        background-image: var(--imageUrl);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        object-fit: cover;
+        scale: 0.5;
+        z-index: 1;
+        opacity: 0;
+    }
+
+    .portrait {
+        width: 340px;
+        height: 540px;
+    }
+
+    .landscape {
+        width: 540px;
+        height: 340px;
+    }
+
+    .showImage {
+        transition: scale 0.6s ease-in-out, opacity 0.1s ease-in-out;
+        opacity: 1;
+        z-index: 2;
+        scale: 1.2;
     }
 }
 
@@ -115,5 +167,14 @@
     100% {
         background-color: #000;
         width: 140px;
+    }
+}
+
+@keyframes squaresAnim {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: var(--opacity);
     }
 }
