--- a/src/components/Pages/Home.scss
+++ b/src/components/Pages/Home.scss
@@ -72,11 +72,12 @@
         background-image: var(--imageUrl);
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: contain;
         object-fit: cover;
         scale: 0.5;
         z-index: 1;
         opacity: 0;
+        transition: scale 0.6s ease-in-out, opacity 0.6s ease-in-out;
     }
 
     .portrait {
@@ -90,7 +91,7 @@
     }
 
     .showImage {
-        transition: scale 0.6s ease-in-out, opacity 0.1s ease-in-out;
+        transition: scale 0.6s ease-in-out;
         opacity: 1;
         z-index: 2;
         scale: 1.2;
