--- a/src/components/NavModal/NavModal.scss
+++ b/src/components/NavModal/NavModal.scss
@@ -36,7 +36,7 @@
 
         .NavModal_items {
             margin-left: 86px;
-            // border: 1px solid red;
+            user-select: none;
 
             .NavModal_item {
                 position: relative;
