--- a/src/components/atoms/OpenNavButton/OpenNavButton.scss
+++ b/src/components/atoms/OpenNavButton/OpenNavButton.scss
@@ -1,63 +1,56 @@
-.GalleryHeader_wrapper {
+.OpenNavButton_wrapper {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 50px;
+    top: 30px;
+    right: 30px;
+    padding: 20px;
     background-color: transparent;
     z-index: 1;
     user-select: none;
-    color: var(--color);
-
-    .GalleryHeader_title {
-        text-transform: uppercase;
-        font-size: 20px;
-        letter-spacing: 1px;
-    }
+    cursor: pointer;
 
     button {
+        cursor: pointer;
         border: none;
         padding: 0;
         margin: 0;
         background-color: transparent;
-        cursor: pointer;
         display: flex;
         flex-direction: column;
         justify-content: center;
 
-        .GalleryHeader_topLine {
+        .OpenNavButton_topLine {
             width: 60px;
             border-bottom: 1px solid var(--color);
             transition: border-bottom 0.5s ease-in-out;
         }
 
-        .GalleryHeader_space {
+        .OpenNavButton_space {
             height: 10px;
             width: 60px;
             transition: height 0.5s ease-in-out 0.5s;
         }
 
-        .GalleryHeader_botLine {
+        .OpenNavButton_botLine {
             width: 60px;
             border-top: 1px solid var(--color);
             transition: border-top 0.5s ease-in-out;
         }
     }
+}
 
-    button:hover {
-        .GalleryHeader_topLine {
+.OpenNavButton_wrapper:hover {
+    button {
+        .OpenNavButton_topLine {
             transition: border-bottom 0.5s ease-in-out 0.5s;
             border-bottom: 5px solid var(--color);
         }
 
-        .GalleryHeader_space {
+        .OpenNavButton_space {
             transition: height 0.5s ease-in-out;
             height: 0px;
         }
 
-        .GalleryHeader_botLine {
+        .OpenNavButton_botLine {
             transition: border-top 0.5s ease-in-out 0.5s;
             border-top: 5px solid var(--color);
         }
