--- a/src/components/molecules/GalleryFooter/GalleryFooter.scss
+++ b/src/components/molecules/GalleryFooter/GalleryFooter.scss
@@ -25,7 +25,7 @@
                 width: 100%;
                 height: 100%;
                 background-color: var(--color);
-                animation: lineAnim 1s ease-in-out;
+                animation: lineAnimGalleryFooter 1s ease-in-out;
             }
         }
     }
@@ -36,7 +36,7 @@
     }
 }
 
-@keyframes lineAnim {
+@keyframes lineAnimGalleryFooter {
     from {
         width: 0%;
     }
