--- a/src/components/molecules/GalleryFooter/GalleryFooter.scss
+++ b/src/components/molecules/GalleryFooter/GalleryFooter.scss
@@ -30,7 +30,7 @@
         }
     }
 
-    .animate {
+    .GalleryFooter_fadeIn {
         opacity: 1;
         transition: opacity 1s ease-in-out;
     }
