--- a/src/components/Pages/GalleryPage/GalleryPage.scss
+++ b/src/components/Pages/GalleryPage/GalleryPage.scss
@@ -25,13 +25,7 @@
         }
     }
 
-    // .hidden {
-    //     scale: 0.5;
-    //     opacity: 0;
-    //     transition: all 1s ease-in-out;
-    // }
-
-    .shown {
+    .GalleryPage_content_shown {
         scale: 1;
         opacity: 1;
         transition: scale 1s ease-in-out, opacity 0.5s ease-in-out;
